----- cvs ci ------
Sat Oct 21 23:26:54 MEZ 2000
tobi (patch from max):
* JAM fix: sqpack don't crashes on areas when msgs deleted from golded
* JAM fix: hpt link works good after deleting msgs from golded
* fixed bug in FFindOpen() (path like "/*")

----- cvs ci ------
Sat Oct 14 23:18:01 NOVST 2000
tobi (patches from Pavel Gulchouk via max):
* JAM fix: sqpack don't crashes on areas when msgs deleted from golded
* JAM fix: hpt link works good after deleting msgs from golded

----- cvs ci ------
Tue Oct  3 18:22:25 MSZ 2000
tobi:
* introduced MSGIMM flag in XMSG for use by JAM API

----- cvs ci ------
Tue Oct  3 00:19:14 MEZ 2000
tobi:
* Support Jam Direct flag (JMSG_DIRECT) via MSGXX1 Squish flag, which is
  already used for "Direct" flagging by a lot of Squish programs. This patch
  is required for CFRoute e.g.


smapi 1.6.4a
============
(released on Sun Sep 17 18:58:45 MEST 2000)

----- cvs ci ------
Sa  16 Sep 2000 23:24:43 CEST
tobi (patch from max from current):
* linking messages with empty subjects (JAM)

----- cvs ci ------
Mon Sep 11 10:56:46 NOVST 2000
max:
* api_jam.c from development branch (patches from PG now really works)
* SDM bugfixes

----- cvs ci ------
Mon Sep 04 12:54:10 NOVST 2000
max (patches from Pavel Gulchouk):
* jam update for "hpt link" & "hptlink"

----- cvs ci ------
Sun Sep 03 19:54:10 NOVST 2000
max (patches from Pavel Gulchouk):
* ReplyTo/Reply1st/ReplyNext support ("hpt link" links jam areas now)

----- cvs ci ------
Tue Aug 29 22:54:10 NOVST 2000
max (patches from Pavel Gulchouk):
* great JAM bugfix! (ex: netmail looks good after packing)

----- cvs ci ------
Tue Aug 06 20:36:01 CEST 2000
tobi:
* support for BeOS (file locking does not work yet, so be sure
  you only run a single application at a time)

----- cvs ci ------
Mon Jul 31 12:18:23 NOVST 2000
max (patches from Pavel Gulchouk):
* MsgDeleteBase() functions

----- cvs ci ------
Tue Jul 25 22:09:07 NOVST 2000
max (patches from Pavel Gulchouk):
* jam @Via fixes
